--- a/server-client/server/style/home.css
+++ b/server-client/server/style/home.css
@@ -1,14 +1,16 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
+    font-family: "Novecento", sans-serif;
+
 }
 
 .container {  
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    width: 100%;
+    width: 100%;    
+
 }
 
 section {
@@ -53,7 +55,7 @@ section {
 .tweet-list {
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .tweet-list h2 {
@@ -63,8 +65,23 @@ section {
     border-radius: 5px 5px 0 0;
 }
 
+.tweet-container {
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    position: relative;
+
+}
+
+.delete-button {
+    position: absolute;
+    
+    bottom: 1;
+    right: 0;
+}
+
 .listTweet {
-    padding: 20px;
+    padding: 10px;
 }
 
 .listTweet .tweet {
@@ -84,3 +101,5 @@ section {
     background-color: #f1f1f1;
     border-radius: 0 0 5px 5px;
 }
+
+
