--- a/server-client/server/style/login.css
+++ b/server-client/server/style/login.css
@@ -1,12 +1,15 @@
 body {
     padding-top: 50px;
+    background-color: gold;
 }
 
 .login-form {
     width: 400px;
     height: 400px;
-    padding: 50px;
+    /* padding: 50px; */
+    padding-top: 100px;
     background-color: lightblue;
     margin: 0 auto;
 
 }
+
