--- a/server-client/server/style/profile.css
+++ b/server-client/server/style/profile.css
@@ -1,12 +1,11 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Novecento", sans-serif;
     margin: 0;
     padding: 0;
 }
 
 .wrapper {
     display: flex;
-    background-color: red;
 }
 
 .boxProfile{
@@ -42,7 +41,7 @@ body {
 
 .profile-display li strong {
     display: inline-block;
-    width: 100px;
+    /* width: 100px; */
 }
 
 .profile-edit {
@@ -52,8 +51,7 @@ body {
 }
 
 .profile-edit h2 {
-    font-size:
-        24px;
+    font-size: 24px;
     margin-top: 0;
 }
 
@@ -86,7 +84,7 @@ body {
     background-color: #FFFFFF;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     padding: 1rem;
-    width: 600px;
+    width: 100%;
 }
 
 .tweet-list article {
