--- a/server-client/server/style/header.css
+++ b/server-client/server/style/header.css
@@ -57,6 +57,9 @@ nav a:hover {
 .profile img {
     border-radius: 50%;
     margin-left: 1rem;
+    height: 50px;
+    width: 60px;
+    
 }
 
 .profile p {
