--- a/server-client/server/style/login.css
+++ b/server-client/server/style/login.css
@@ -1,15 +1,28 @@
 body {
-    padding-top: 50px;
-    background-color: gold;
+    font-family: "Novecento", sans-serif;
+    background-color: lightblue;
+}
+h1 {
+    text-align: center;
+    margin-top: 50px;
 }
 
 .login-form {
     width: 400px;
-    height: 400px;
-    /* padding: 50px; */
-    padding-top: 100px;
-    background-color: lightblue;
-    margin: 0 auto;
-
+    border: 2px solid black;
+    padding: 20px;
+    margin: 50px auto;
 }
 
+button {
+    background-color: darkblue;
+    color: white;
+    width: 90%;
+    padding: 10px;
+}
+
+input {
+    width: 90%;
+    padding: 10px;
+    background-color: lightcyan;
+}
