--- a/server-client/server/style/header.css
+++ b/server-client/server/style/header.css
@@ -1,4 +1,3 @@
-
 /* Reset */
 * {
     margin: 0;
@@ -55,11 +54,11 @@ nav a:hover {
 }
 
 .profile img {
-    border-radius: 50%;
+    border-radius: 10px;
     margin-left: 1rem;
     height: 50px;
     width: 60px;
-    
+
 }
 
 .profile p {
@@ -70,4 +69,13 @@ nav a:hover {
 
 .profile form {
     margin-left: 1rem;
+}
+
+.logout-btn {
+    background-color: #1DA1F2;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
 }
