--- a/server-client/server/style/login.css
+++ b/server-client/server/style/login.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Novecento", sans-serif;
-    background-color: lightblue;
+    padding-bottom: 50px;
 }
+
 h1 {
     text-align: center;
     margin-top: 50px;
@@ -9,20 +10,41 @@ h1 {
 
 .login-form {
     width: 400px;
-    border: 2px solid black;
     padding: 20px;
-    margin: 50px auto;
+    margin: 0 auto;
 }
 
 button {
-    background-color: darkblue;
-    color: white;
-    width: 90%;
-    padding: 10px;
+    background-color: #1DA1F2;
+    color: #FFFFFF;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    cursor: pointer;
+
 }
 
 input {
     width: 90%;
     padding: 10px;
-    background-color: lightcyan;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+
+}
+
+.loginClass {
+    border: 2px solid #ccc;
+    background-color: #f2f2f2;
+    width: 500px;
+    padding: 20px;
+    margin: 50px auto;
+}
+
+.errorLogin {
+    color: red;
+    font-size: 12px;
+    margin-top: -15px;
+    font-size: 16px;
+    font-weight: 800;
+    text-align: center;
 }
