--- a/server-client/server/style/register.css
+++ b/server-client/server/style/register.css
@@ -2,19 +2,20 @@ body {
     font-family: "Novecento", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: lightblue;   
 }
 
 h1 {
     text-align: center;
     margin-top: 50px;
+    color: #1DA1F2;
 }
 
 form {
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
-    border: 2px solid black;
+    border: 1px solid #ccc;
+    background-color: #f2f2f2;
 
 }
 
@@ -23,20 +24,23 @@ label {
     margin-bottom: 2px;
     margin-top: 8px;
     width: 90%;
+    padding: 5px;
 
 }
 
 button {
-    background-color: darkblue;
-    color: white; 
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 20px;
+    background-color: #1DA1F2;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    cursor: pointer;
+
 }
 
 input {
     width: 90%;
     padding: 10px;
-    margin-bottom: 10px;
-    background-color: lightcyan;
+    background-color: #FFFFFF;
+    border-radius: 10px;
 }
