--- a/server-client/server/style/profile.css
+++ b/server-client/server/style/profile.css
@@ -131,3 +131,13 @@ body {
     margin-bottom: 10px;
     color: #55acee;
 }
+
+.deleteAccount{
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    background-color: #1da1f2;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
