--- a/server-client/server/style/profile.css
+++ b/server-client/server/style/profile.css
@@ -181,5 +181,56 @@ body {
     background-color: #c62828;
   }
   
+  .tweet-container {
+    padding: 10px;
+  }
+  
+  .usernameT {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .textT {
+    margin-bottom: 5px;
+  }
+  
+  .created_atT {
+    margin-bottom: 5px;
+  }
+  
+  .like-count {
+    margin-bottom: 5px;
+  }
+  
+  .like-button {
+    background-color: #1da1f2;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  
+  .delete-button {
+    background-color: #f44336;
+    border: none;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+  }
+  
+  hr {
+    border: 0;
+    border-top: 1px solid black;
+    margin: 20px 0;
+  }
   
   
