--- a/server-client/server/style/home.css
+++ b/server-client/server/style/home.css
@@ -24,7 +24,6 @@ body {
   border: 1px solid #ccc;
   border-radius: 10px;
   margin-right: 10px;
-
 }
 
 .searchBar button[type="submit"] {
@@ -35,11 +34,29 @@ body {
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s ease;
+
 }
 .searchBar button:hover {
   background-color: #0d8de4;
 }
 
+.searcResult {
+  padding: 20px;
+  margin-top: 15px;
+  margin-right: 30px;
+  margin-left: 30px;
+  border: #ccc 1px solid;
+  border-radius: 20px;
+
+}
+
+.searcResult .username_name {
+  font-weight: bold;
+}
+
+.searcResult .tweet-text {
+  margin-bottom: 10px;
+}
 
 section {
     padding: 20px;
@@ -228,7 +245,7 @@ section {
   
   hr {
     border: 0;
-    border-top: 1px solid black;
+    border-top: 1px solid #ccc;
     margin: 20px 0;
   }
   
