--- a/server-client/server/style/home.css
+++ b/server-client/server/style/home.css
@@ -48,7 +48,7 @@ body {
   margin-left: 30px;
   border: #ccc 1px solid;
   border-radius: 20px;
-
+  border: 1px solid #ccc;
 }
 
 .searcResult .username_name {
