New profile for other users. bug  Password fixed

--- a/server-client/server/style/home.css
+++ b/server-client/server/style/home.css
@@ -208,6 +208,18 @@ section {
   margin-bottom: 5px;
 }
 
+.buttonUser{
+  padding: 5px;
+  background-color: #61baf2;
+  color: #fff;
+  border: 0;
+
+
+}
+.buttonUser:hover {
+  background-color: #0c86c4;
+}
+
 .textT {
   margin-bottom: 5px;
 }
